plugins {
    id 'java'
    id 'war'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

sourceCompatibility = 14
targetCompatibility = 14

dependencies {
    implementation 'org.jetbrains:annotations:19.0.0'
    testCompile group: 'junit', name: 'junit', version: '4.11'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'

    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.0.1'

    // https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api
    compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'

    // https://mvnrepository.com/artifact/net.iharder/base64
    compile group: 'net.iharder', name: 'base64', version: '2.3.9'


}
